--- a/index.html
+++ b/index.html
@@ -10,23 +10,24 @@
       <div><img src="ga.png" /></div>
       <div class="title">Bank of GA</div>
     </div>
-    
+
     <div class="account">
       <h2>Checking</h2>
-      <div class="balance">$0</div>
-      <input type="text" placeholder="enter an amount" />
-      <input type="button" value="Deposit" />
-      <input type="button" value="Withdraw" />
+      <div class="balance" id="checking_balance">$0</div>
+      <input type="text" id="checking_input" placeholder="enter an amount" />
+      <input type="button" id="checking_deposit" value="Deposit" />
+      <input type="button" id="checking_withdraw" value="Withdraw" />
     </div>
 
     <div class="account">
       <h2>Savings</h2>
-      <div class="balance">$0</div>
-      <input type="text" placeholder="enter an amount" />
-      <input type="button" value="Deposit" />
-      <input type="button" value="Withdraw" />
+      <div class="balance" id="savings_balance">$0</div>
+      <input type="text" id="savings_input" placeholder="enter an amount" />
+      <input type="button" id="savings_deposit" value="Deposit" />
+      <input type="button" id="savings_withdraw" value="Withdraw" />
     </div>
 
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="atm.js"></script>
   </body>
 </html>
