--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
       <div><img src="ga.png" /></div>
       <div class="title">Bank of GA</div>
     </div>
-    
+
     <div class="account">
       <h2>Checking</h2>
-      <div class="balance">$0</div>
-      <input type="text" placeholder="enter an amount" />
+      <div class="balance" id="checking_balance">$0</div>
+      <input type="text" placeholder="enter an amount" id="amountEntry"/>
       <input type="button" value="Deposit" />
       <input type="button" value="Withdraw" />
     </div>
@@ -26,7 +26,7 @@
       <input type="button" value="Deposit" />
       <input type="button" value="Withdraw" />
     </div>
-
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
     <script src="atm.js"></script>
   </body>
 </html>
