--- a/index.html
+++ b/index.html
@@ -14,17 +14,17 @@
     <div class="account">
       <h2>Checking</h2>
       <div class="balance">$0</div>
-      <input type="text" placeholder="enter an amount" />
-      <input type="button" value="Deposit" />
-      <input type="button" value="Withdraw" />
+      <input id="check-input" type="text" placeholder="enter an amount" />
+      <input id='checkbtn-d' type="button" value="Deposit" />
+      <input id='checkbtn-w'type="button" value="Withdraw" />
     </div>
 
     <div class="account">
       <h2>Savings</h2>
       <div class="balance">$0</div>
-      <input type="text" placeholder="enter an amount" />
-      <input type="button" value="Deposit" />
-      <input type="button" value="Withdraw" />
+      <input id="savings-input" type="text" placeholder="enter an amount" />
+      <input id='savingsbtn-d' type="button" value="Deposit" />
+      <input id='savingsbtn-w' type="button" value="Withdraw" />
     </div>
     <script src="https://code.jquery.com/jquery-2.2.1.min.js"></script>
     <script src="atm.js"></script>
