--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
     <title>ATM</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="atm.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
   </head>
   <body>
     <div class="header">
       <div><img src="ga.png" /></div>
       <div class="title">Bank of GA</div>
     </div>
-    
+
     <div class="account">
       <h2>Checking</h2>
       <div class="balance">$0</div>
@@ -26,7 +27,6 @@
       <input type="button" value="Deposit" />
       <input type="button" value="Withdraw" />
     </div>
-
     <script src="atm.js"></script>
   </body>
 </html>
