--- a/index.html
+++ b/index.html
@@ -10,21 +10,21 @@
       <div><img src="ga.png" /></div>
       <div class="title">Bank of GA</div>
     </div>
-    
+
     <div class="account">
       <h2>Checking</h2>
       <div class="balance">$0</div>
-      <input type="text" placeholder="enter an amount" />
-      <input type="button" value="Deposit" />
-      <input type="button" value="Withdraw" />
+      <input type="text" placeholder="enter an amount" id="entCheck"/>
+      <input type="button" value="Deposit" id="depCheck"/>
+      <input type="button" value="Withdraw" id="witCheck"/>
     </div>
 
     <div class="account">
       <h2>Savings</h2>
       <div class="balance">$0</div>
-      <input type="text" placeholder="enter an amount" />
-      <input type="button" value="Deposit" />
-      <input type="button" value="Withdraw" />
+      <input type="text" placeholder="enter an amount" id="entSave"/>
+      <input type="button" value="Deposit" id="depSave"/>
+      <input type="button" value="Withdraw" id="withSave"/>
     </div>
 
     <script src="atm.js"></script>
