--- a/index.html
+++ b/index.html
@@ -10,23 +10,25 @@
       <div><img src="ga.png" /></div>
       <div class="title">Bank of GA</div>
     </div>
-    
+
     <div class="account">
       <h2>Checking</h2>
-      <div class="balance">$0</div>
-      <input type="text" placeholder="enter an amount" />
-      <input type="button" value="Deposit" />
+      <div class="checkingBalance">$0</div>
+      <input type="text" id = "checkingDepotext" placeholder="enter an amount" />
+      <input type="button" id = "depositCheckingButton" value="Deposit" />
       <input type="button" value="Withdraw" />
     </div>
 
     <div class="account">
       <h2>Savings</h2>
-      <div class="balance">$0</div>
-      <input type="text" placeholder="enter an amount" />
-      <input type="button" value="Deposit" />
+      <div class="savingBalance">$0</div>
+      <input type="text" id = "savingDepotext" placeholder="enter an amount" />
+      <input type="button" id = "depositSavingButton" value="Deposit" />
       <input type="button" value="Withdraw" />
     </div>
 
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="atm.js"></script>
+
   </body>
 </html>
