--- a/obfuscate/atm.html
+++ b/obfuscate/atm.html
@@ -4,7 +4,6 @@
     <title>ATM</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="atm.css">
-    <script src="atm.js"></script>
   </head>
   <body>
     <div id="content">
@@ -28,5 +27,7 @@
       </div>
       <div class="clear"></div>
     </div>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"> </script>
+    <script src="atm.js"></script>
   </body>
 </html>
