--- a/index.html
+++ b/index.html
@@ -10,23 +10,24 @@
       <div><img src="ga.png" /></div>
       <div class="title">Bank of GA</div>
     </div>
-    
+
     <div class="account">
       <h2>Checking</h2>
-      <div class="balance">$0</div>
-      <input type="text" placeholder="enter an amount" />
-      <input type="button" value="Deposit" />
-      <input type="button" value="Withdraw" />
+      <div class="checking balance">0</div>
+      <input type="text" id='checkInput' placeholder="enter an amount" />
+      <input type="button" value="Deposit" id='checkDeposit'/>
+      <input type="button" value="Withdraw" id='checkWithdraw'/>
     </div>
 
     <div class="account">
       <h2>Savings</h2>
-      <div class="balance">$0</div>
-      <input type="text" placeholder="enter an amount" />
-      <input type="button" value="Deposit" />
-      <input type="button" value="Withdraw" />
+      <div class="savings balance">0</div>
+      <input type="text" id='savingsInput' placeholder="enter an amount" />
+      <input type="button" value="Deposit" id='saveDeposit'/>
+      <input type="button" value="Withdraw" id='saveWithdraw'/>
     </div>
 
+    <script src='jquery-2.2.1.min.js'></script>
     <script src="atm.js"></script>
   </body>
 </html>
