--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <div class="title">Bank of GA</div>
     </div>
 
-    <div class="account">
+    <div class="account" id="cAccount">
       <h2>Checking</h2>
       <div class="checking balance">0</div>
       <input type="text" id='checkInput' placeholder="enter an amount" />
@@ -19,7 +19,7 @@
       <input type="button" value="Withdraw" id='checkWithdraw'/>
     </div>
 
-    <div class="account">
+    <div class="account" id='sAccount'>
       <h2>Savings</h2>
       <div class="savings balance">0</div>
       <input type="text" id='savingsInput' placeholder="enter an amount" />
