--- a/index.html
+++ b/index.html
@@ -11,17 +11,17 @@
       <div class="title">Bank of GA</div>
     </div>
 
-    <div class="account">
+    <div class="account" data-account='checking'>
       <h2>Checking</h2>
-      <div class="balance">0</div>
+      <div class="balance">$0</div>
       <input type="text" placeholder="enter an amount" />
       <input type="button" value="Deposit" />
       <input type="button" value="Withdraw" />
     </div>
 
-    <div class="account">
+    <div class="account" data-account='savings'>
       <h2>Savings</h2>
-      <div class="balance">0</div>
+      <div class="balance">$0</div>
       <input type="text" placeholder="enter an amount" />
       <input type="button" value="Deposit" />
       <input type="button" value="Withdraw" />
