--- a/index.html
+++ b/index.html
@@ -4,27 +4,28 @@
     <title>ATM</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="atm.css">
+    <script src="https://code.jquery.com/jquery-2.2.1.min.js"></script>
   </head>
   <body>
     <div class="header">
       <div><img src="ga.png" /></div>
       <div class="title">Bank of GA</div>
     </div>
-    
+
     <div class="account">
       <h2>Checking</h2>
-      <div class="balance">$0</div>
-      <input type="text" placeholder="enter an amount" />
-      <input type="button" value="Deposit" />
-      <input type="button" value="Withdraw" />
+      <div class="checking_balance">$0</div>
+      <input class ='inputField' type="text" placeholder="enter an amount" />
+      <input class="deposit" type="button" value="Deposit" />
+      <input class="withdraw "type="button" value="Withdraw" />
     </div>
 
     <div class="account">
       <h2>Savings</h2>
-      <div class="balance">$0</div>
-      <input type="text" placeholder="enter an amount" />
-      <input type="button" value="Deposit" />
-      <input type="button" value="Withdraw" />
+      <div class="savings_balance">$0</div>
+      <input class="sInputField" type="text" placeholder="enter an amount" />
+      <input class="sDeposit" type="button" value="Deposit" />
+      <input class="sWithdraw" type="button" value="Withdraw" />
     </div>
 
     <script src="atm.js"></script>
