--- a/index.html
+++ b/index.html
@@ -10,23 +10,24 @@
       <div><img src="ga.png" /></div>
       <div class="title">Bank of GA</div>
     </div>
-    
-    <div class="account">
+
+    <div class="account" id="checkingAcct">
       <h2>Checking</h2>
       <div class="balance">$0</div>
-      <input type="text" placeholder="enter an amount" />
-      <input type="button" value="Deposit" />
-      <input type="button" value="Withdraw" />
+      <input type="text" id="checkingAmt" placeholder="enter an amount" />
+      <input type="button" id="checkingDeposit" value="Deposit" />
+      <input type="button" id="checkingWithdrawal" value="Withdraw" />
     </div>
 
-    <div class="account">
+    <div class="account" id="savingsAcct">
       <h2>Savings</h2>
       <div class="balance">$0</div>
-      <input type="text" placeholder="enter an amount" />
-      <input type="button" value="Deposit" />
-      <input type="button" value="Withdraw" />
+      <input type="text" id="savingsAmt" placeholder="enter an amount" />
+      <input type="button" id="savingsDeposit" value="Deposit" />
+      <input type="button" id="savingsWithdrawal" value="Withdraw" />
     </div>
 
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
     <script src="atm.js"></script>
   </body>
 </html>
