--- a/index.html
+++ b/index.html
@@ -10,25 +10,20 @@
     <div><img src="ga.png" /></div>
     <div class="title">Bank of GA</div>
   </div>
-
   <div class="account">
     <h2>Checking</h2>
     <div class="balance" id="checkingBalance">$0</div>
-    <form id="myChecking">
       <input type="text" id="newChecking" placeholder="enter an amount" />
-      <input type="button" value="Deposit" class="deposit" />
-      <input type="button" value="Withdraw" class="withdraw" />
-    </form>
+      <input type="button" value="Deposit" class="depositC" />
+      <input type="button" value="Withdraw" class="withdrawC" />
   </div>
-
   <div class="account">
     <h2>Savings</h2>
     <div class="balance" id="savingsBalance">$0</div>
-    <form id="mySavings">
+
       <input type="text" id="newSavings" placeholder="enter an amount" />
-      <input type="button" value="Deposit" class="deposit" />
-      <input type="button" value="Withdraw" class="withdraw" />
-    </form>
+      <input type="button" value="Deposit" class="depositS" />
+      <input type="button" value="Withdraw" class="withdrawS" />
   </div>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   <script src="atm.js"></script>
