--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <title>ATM</title>
     <meta charset="utf-8">
+    <script src="
+https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-beta1/jquery.js"></script>
     <link rel="stylesheet" href="atm.css">
   </head>
   <body>
@@ -10,7 +12,7 @@
       <div><img src="ga.png" /></div>
       <div class="title">Bank of GA</div>
     </div>
-    
+
     <div class="account">
       <h2>Checking</h2>
       <div class="balance">$0</div>
@@ -26,6 +28,7 @@
       <input type="button" value="Deposit" />
       <input type="button" value="Withdraw" />
     </div>
+
 
     <script src="atm.js"></script>
   </body>
