--- a/index.html
+++ b/index.html
@@ -10,14 +10,27 @@
       <div><img src="ga.png" /></div>
       <div class="title">Bank of GA</div>
     </div>
-    
+
     <div class="account">
       <h2>Checking</h2>
       <div class="balance">$0</div>
-      <input type="text" placeholder="enter an amount" />
-      <input type="button" value="Deposit" />
+      <input id="checkingadd" type="text" placeholder="enter an amount" />
+      <input id="checkingsubmit" type="button" value="Deposit" />
       <input type="button" value="Withdraw" />
     </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
 
     <div class="account">
       <h2>Savings</h2>
