--- a/index.html
+++ b/index.html
@@ -1,32 +1,30 @@
-<!doctype html>
-<html>
-  <head>
-    <title>ATM</title>
-    <meta charset="utf-8">
-    <link rel="stylesheet" href="atm.css">
-  </head>
-  <body>
-    <div class="header">
-      <div><img src="ga.png" /></div>
-      <div class="title">Bank of GA</div>
-    </div>
-    
-    <div class="account">
-      <h2>Checking</h2>
-      <div class="balance">$0</div>
-      <input type="text" placeholder="enter an amount" />
-      <input type="button" value="Deposit" />
-      <input type="button" value="Withdraw" />
-    </div>
+<!DOCTYPE html>
+<title>ATM</title>
+<meta charset="utf8">
+<link rel="stylesheet" href="atm.css">
+<script src="https://code.jquery.com/jquery2.2.1.min.js"></script>
+</head>
+<body>
+  <div class="header">
+    <div><img src="ga.png" /></div>
+    <div class="title">Bank of GA</div>
+  </div>
 
-    <div class="account">
-      <h2>Savings</h2>
-      <div class="balance">$0</div>
-      <input type="text" placeholder="enter an amount" />
-      <input type="button" value="Deposit" />
-      <input type="button" value="Withdraw" />
-    </div>
 
-    <script src="atm.js"></script>
-  </body>
-</html>
+  <div class="account">
+    <h2>Checking</h2>
+    <div class="balance">$0</div>
+    <input type="text" placeholder="enter an amount" />
+    <input type="button" value="Deposit" />
+    <input type="button" value="Withdraw" />
+  </div>
+
+  <div class="account">
+    <h2>Savings</h2>
+    <div class="balance">$0</div>
+    <input type="text" placeholder="enter an amount" />
+    <input type="button" value="Deposit" />
+    <input type="button" value="Withdraw" />
+  </div>
+
+  <script src="atm.js"></script>
