--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
       <div class="title">Bank of GA</div>
     </div>
 
-    <div id="checking_account"
+    <div id="checkingAccount"
     class="account">
       <h2>Checking</h2>
       <div class="balance">$0</div>
-      <input type="text" placeholder="enter an amount" />
-      <input type="button" value="Deposit" />
+      <input id="checkingField" type="text" placeholder="enter an amount" />
+      <input id="checkingDepositBtn" type="button" value="Deposit" />
       <input type="button" value="Withdraw" />
     </div>
 
