--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <div class="balance">$0</div>
       <input id="checkingField" type="text" placeholder="enter an amount" />
       <input id="checkingDepositBtn" type="button" value="Deposit" />
-      <input type="button" value="Withdraw" />
+      <input id="checkingWithdrawBtn" type="button" value="Withdraw" />
     </div>
 
     <div id="savings_account" class="account">
