--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
       <input type="button" id="checkingWithdrawalBtn" value="Withdraw" />
     </div>
 
-    <div class="account">
+    <div id="savingsAccount" class="account">
       <h2>Savings</h2>
       <div class="balance">$0</div>
-      <input type="text" placeholder="enter an amount" />
-      <input type="button" value="Deposit" />
-      <input type="button" value="Withdraw" />
+      <input type="text" id="savingsField" placeholder="enter an amount" />
+      <input type="button" id="savingsDepositBtn" value="Deposit" />
+      <input type="button" id="savingsWithdrawalBtn" value="Withdraw" />
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src="atm.js"></script>
