--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
       <input id="checkingWithdrawBtn" type="button" value="Withdraw" />
     </div>
 
-    <div id="savings_account" class="account">
+    <div id="savingsAccount" class="account">
       <h2>Savings</h2>
       <div class="balance">$0</div>
-      <input type="text" placeholder="enter an amount" />
-      <input type="button" value="Deposit" />
-      <input type="button" value="Withdraw" />
+      <input id="savingsField" type="text" placeholder="enter an amount" />
+      <input id="savingsDepositBtn" type="button" value="Deposit" />
+      <input id="savingsWithdrawBtn" type="button" value="Withdraw" />
     </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
