--- a/index.html
+++ b/index.html
@@ -14,17 +14,17 @@
     <div id="checking" class="account">
       <h2>Checking</h2>
       <div class="balance">$0</div>
-      <input class="input" type="text" placeholder="enter an amount" />
-      <input class="deposit" type="button" value="Deposit" />
-      <input class="withdraw" type="button" value="Withdraw" />
+      <input id="inputChecking" type="text" placeholder="enter an amount" />
+      <input id="depositChecking" type="button" value="Deposit" />
+      <input id="withdrawChecking" type="button" value="Withdraw" />
     </div>
 
     <div id="savings" class="account">
       <h2>Savings</h2>
       <div class="balance">$0</div>
-      <input class="input" type="text" placeholder="enter an amount" />
-      <input class="deposit" type="button" value="Deposit" />
-      <input class="withdraw" type="button" value="Withdraw" />
+      <input id="inputSavings" type="text" placeholder="enter an amount" />
+      <input id="depositSavings" type="button" value="Deposit" />
+      <input id="withdrawSavings" type="button" value="Withdraw" />
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
     <script src="atm.js"></script>
